--- a/debian-fieldworks/changelog
+++ b/debian-fieldworks/changelog
@@ -1,5 +1,11 @@
-fieldworks-enc-converters (4.0.1) precise; urgency=low
+fieldworks-enc-converters (4.0.3) precise; urgency=low
 
-  * Build package explicitly to go with fieldworks using mono-sil.
+  * Fixed broken postinst script.
+
+ -- Stephen McConnel <stephen_mcconnel@sil.org>  Thu, 16 Apr 2015 10:36:00 -0500
+
+fieldworks-enc-converters (4.0.2) precise; urgency=low
+
+  * First package built explicitly to go with fieldworks using mono-sil.
 
  -- Stephen McConnel <stephen_mcconnel@sil.org>  Tue, 14 Apr 2015 17:24:37 -0500
