--- a/debian-fieldworks/changelog
+++ b/debian-fieldworks/changelog
@@ -1,3 +1,9 @@
+fieldworks-enc-converters (4.0.4) precise; urgency=low
+
+  * Update debian-fieldworks to address registry issue.
+
+ -- Brent McCarthy <brent_mccarthy@sil.org>  Thu, 16 Apr 2015 10:36:00 -0500
+
 fieldworks-enc-converters (4.0.3) precise; urgency=low
 
   * Fixed broken postinst script.
