--- a/debian-fieldworks/changelog
+++ b/debian-fieldworks/changelog
@@ -1,3 +1,11 @@
+fieldworks-enc-converters (4.0.5+nmu1) stable; urgency=medium
+
+  * Non-maintainer upload.
+  * Use HKCU before HKLM
+  * Use ICU from /usr/lib/fieldworks
+
+ -- Brent McCarthy <brent_mccarthy@sil.org>  Wed, 03 Jun 2015 14:42:41 -0600
+
 fieldworks-enc-converters (4.0.5) precise; urgency=low
 
   * Fix debian-fieldworks registry value.
