--- a/debian-fieldworks/changelog
+++ b/debian-fieldworks/changelog
@@ -1,3 +1,9 @@
+fieldworks-enc-converters (4.0.7) precise; urgency=low
+
+  * Add Replaces and Breaks to ease upgrading fieldworks-applications from 8.1.4.
+
+ -- Brent McCarthy <brent_mccarthy@sil.org>  Tue, 11 Aug 2015 12:54:57 -0600
+
 fieldworks-enc-converters (4.0.6) stable; urgency=medium
 
   * Use HKCU before HKLM
