Change packaging to use mono 5
* Change depends and build-depends to mono5-sil and libgdiplus5-sil to
more easily run on Ubuntu 20.04.
* Add msbuild dependency.
* Put $@ first in debian/rules dh command to be ready for future
compatibility levels of dh.
* In debian/rules, use environ to set the environment over all the
packaging steps.
- Removing FIELDWORKS=1 since is in environ.
* Give msbuild.sh output some context.
* Newer nuget seems to need more help than just XDG_CONFIG_HOME or
XDG_DATA_HOME. Setting HOME instead since otherwise HOME is
/nonexistent, causing a problem for nuget downloading.
* Reorder the Release section of a couple csproj files so `make
release` works.
* Broaded dependency to python2-dev, still in Ubuntu 20.04 universe.
- Set PYTHON_VERSION="2.7" in `environ` so configure finds the
`python2.7` executable instead of looking for `python` and not finding
it.
* Make downloading with wget and nuget be retried a few times, so that
network problems on the build server are less likely to fail a job.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fieldworks-enc-converters (4.0.7.1) focal; urgency=medium
+
+  * Use mono 5.
+
+ -- MarkS <marksvc@gmail.com>  Wed, 12 Feb 2020 10:40:14 -0600
+
 fieldworks-enc-converters (4.0.7) precise; urgency=low
 
   * Add Replaces and Breaks to ease upgrading fieldworks-applications from 8.1.4.
