--- a/src/EncCnvtrs/Properties/Resources.resx
+++ b/src/EncCnvtrs/Properties/Resources.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="BrowseFileSpecHelpString" xml:space="preserve">
     <value>
@@ -163,6 +163,37 @@ For example, if this is an Unicode encoding converter, then the input will be Le
 Choose the encoding type for the output of the table/map: either Unicode or Legacy bytes
 For example, if this is an Unicode encoding converter, then the output will be Unicode encoding.
     </value>
+  </data>
+  <data name="HelpForBingTranslatorAddYourOwnApiKey" xml:space="preserve">
+    <value>Click this button to enter your own API key from Microsoft Azure. See the "Prerequisites" section on the page, https://docs.microsoft.com/en-us/azure/cognitive-services/translator/quickstart-translator, for how to get your own key (e.g. if the default API key has run out of translation support -- note: the default API key is using the free pricing tier and is limited to 2 million characters/month)</value>
+  </data>
+  <data name="HelpForBingTranslatorRadioButtonDictionaryLookup" xml:space="preserve">
+    <value>Choose this option to create a dictionary lookup converter for a word from one language to another. If there are multiple translations for a given word, then the converted text will be in the Ample ambiguity form (i.e. "%&lt;count=n&gt;%&lt;translation_1&gt;%&lt;translation_2&gt;%...%&lt;translation_n&gt;%", e.g. "%2%from%with%"). Note: if there are multiple words in the input text, the lookup will only return data for the first word.
+See the Dictionary column in the chart on the webpage: https://docs.microsoft.com/en-us/azure/cognitive-services/translator/language-support to see which languages have dictionary support.</value>
+  </data>
+  <data name="HelpForBingTranslatorRadioButtonTranslate" xml:space="preserve">
+    <value>Choose this option to create a translator from one language to another, or from 'Any' language (aka. Auto-Detect) to some target language
+See https://docs.microsoft.com/en-us/azure/cognitive-services/translator/language-support to see which languages are supported.</value>
+  </data>
+  <data name="HelpForBingTranslatorRadioButtonTranslateWithTransliteration" xml:space="preserve">
+    <value>Choose this option to create a translator from one language to another, or from 'Any' language (aka. Auto-Detect) to some target language AND transliterate the result into another script (currently, only Latin supported).
+See https://docs.microsoft.com/en-us/azure/cognitive-services/translator/language-support to see which languages and transliterated scripts are supported.</value>
+  </data>
+  <data name="HelpForBingTranslatorRadioButtonTransliterate" xml:space="preserve">
+    <value>Choose this option to create a transliterator from one script to another for a given Source language.
+See https://docs.microsoft.com/en-us/azure/cognitive-services/translator/language-support to see which languages and transliterated scripts are supported.</value>
+  </data>
+  <data name="HelpForBingTranslatorSourceLanguagesComboBox" xml:space="preserve">
+    <value>Choose the language you want to translate or transliterate from. Choose 'Auto-Detect' if you want the underlying Bing Translator to attempt to determine the input language. See https://docs.microsoft.com/en-us/azure/cognitive-services/translator/language-support to see which languages support Auto language detection.</value>
+  </data>
+  <data name="HelpForBingTranslatorSourceScriptTextBox" xml:space="preserve">
+    <value>This box shows the expected script of the input text before it is transliterated.</value>
+  </data>
+  <data name="HelpForBingTranslatorTargetLanguagesComboBox" xml:space="preserve">
+    <value>Choose the language you want the input text to be translated into.</value>
+  </data>
+  <data name="HelpForBingTranslatorTargetScriptsComboBox" xml:space="preserve">
+    <value>Choose the script you want the input text (or the translated text, in the 'Translate + Transliterate' case) to be transliterated into.</value>
   </data>
   <data name="PreviewBoxHelpString" xml:space="preserve">
     <value>
