--- a/src/BackTranslationHelper/Properties/Resources.resx
+++ b/src/BackTranslationHelper/Properties/Resources.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -189,6 +189,12 @@
   </data>
   <data name="HTML_TableCellWidthAlignTop" xml:space="preserve">
     <value>&lt;td width="{0}%" valign="top"&gt;{1}&lt;/td&gt;</value>
+  </data>
+  <data name="pindown" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pindown.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pinup" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pinup.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="HTML_TableRow" xml:space="preserve">
     <value>  &lt;tr&gt;
