--- a/src/EcTranslators/Properties/Resources.resx
+++ b/src/EcTranslators/Properties/Resources.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DeepLTranslatorKeyDialogInstructionUrl" xml:space="preserve">
+    <value>https://www.deepl.com/pro?cta=header-pro/</value>
+  </data>
+  <data name="GoogleTranslatorKeyDialogInstructionUrl" xml:space="preserve">
+    <value>https://cloud.google.com/translate/docs/setup#creating_service_accounts_and_keys</value>
+  </data>
   <data name="HelpForBingTranslatorAddYourOwnApiKey" xml:space="preserve">
     <value>Click this button to enter your own API key from Microsoft Azure. See the "Prerequisites" section on the page, https://docs.microsoft.com/en-us/azure/cognitive-services/translator/quickstart-translator, for how to get your own key (e.g. if the default API key has run out of translation support -- note: the default API key is using the free pricing tier and is limited to 2 million characters/month)</value>
   </data>
