--- a/src/EcTranslators/NllbTranslator/QueryForEndpointAndApiKey.resx
+++ b/src/EcTranslators/NllbTranslator/QueryForEndpointAndApiKey.resx
@@ -120,7 +120,30 @@
   <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
+  <data name="comboBoxNllbModel.ToolTip" xml:space="preserve">
+    <value>Select the NLLB model you want to use. The larger the model, the more accurate the translation, but the longer it will take to download, initialize, and translate text. (Stored in the settings.py file)</value>
+  </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAICAQAAAAAADoAgAAJgAAABAQEAAAAAAAKAEAAA4DAAAoAAAAIAAAAEAAAAABAAQAAAAAAIAC
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAgAAAAICAAIAAAACAAIAAgIAAAICAgADAwMAAAAD/AAD/
+        AAAA//8A/wAAAP8A/wD//wAA////AHd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3
+        d3f3d3d3d3d3d3d3d3d3d3d//3d3d3d3d3d3d3d3d3d3d//3d3d3d3d3d3d3d3d3d3d//3d3d3d3d3d3
+        d3d3d//////3d3d3d3d3d3d3d3f//////3d3d3d3d3d3d3d3//////d3d3d3d3d3d3d3d3d3f/93d3d3
+        d3d3d3d3d3d3d//3d3d3d3d3d3d3d3d3d3//d3d3d3d3d3d3d3d3d3d393d3d3d3d3d3d3d3d3d3d3d3
+        d3d3d3d3d3d3d3d3d3d3d3d3d3d3d7u7d3e7u7u3d3u7u7t3e7u7u3d3u7u7t3d7u7u7d3u7d3d3d3d3
+        d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3f3d3d3d3d3d3d3d3d3d3d//3d3d3d3d3d3d3
+        d3d3d3//d3d3d3d3d3d3d3d3d3f/93d3d3d3d3d3d3d3d3d//////3d3d3d3d3d3d3d3//////93d3d3
+        d3d3d3d3d3//////d3d3d3d3d3d3d3d3//d3d3d3d3d3d3d3d3d3d3//d3d3d3d3d3d3d3d3d3d3//d3
+        d3d3d3d3d3d3d3d3d393d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAoAAAAEAAAACAAAAABAAQAAAAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAgAAAAICAAIAA
+        AACAAIAAgIAAAICAgADAwMAAAAD/AAD/AAAA//8A/wAAAP8A/wD//wAA////AHd3d3d3d3d3d3d3d/d3
+        d3d3d3d3f3d3d3d3d///93d3d3d3d393d3d3d3d393d3d3d3d3d3d3d3u7t3u7t3u7u7u3e7u3e7u3d3
+        d3d3d3d3d3d3f3d3d3d3d3f3d3d3d3d3f///d3d3d3d393d3d3d3d3d/d3d3d3d3d3d3d3d3AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
