--- a/src/EcTranslators/Properties/Resources.resx
+++ b/src/EcTranslators/Properties/Resources.resx
@@ -117,8 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="buildDocker" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\nllbtranslator\docker\builddocker.ps1;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="DeepLTranslatorKeyDialogInstructionUrl" xml:space="preserve">
     <value>https://www.deepl.com/pro?cta=header-pro/</value>
+  </data>
+  <data name="Dockerfile" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\nllbtranslator\docker\dockerfile;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="GoogleTranslatorKeyDialogInstructionUrl" xml:space="preserve">
     <value>https://cloud.google.com/translate/docs/setup#creating_service_accounts_and_keys</value>
@@ -191,12 +198,27 @@ See https://docs.microsoft.com/en-us/azure/cognitive-services/translator/languag
     <value>Choose the language you want the input text to be translated into.</value>
   </data>
   <data name="HelpForNllbTranslatorAddYourOwnApiKey" xml:space="preserve">
-    <value>Click this button to enter your own API key.</value>
+    <value>Click this button to configure the NLLB Parameters (e.g. which model to use, an API key, and the endpoint).</value>
   </data>
   <data name="HelpForNllbTranslatorSourceLanguagesComboBox" xml:space="preserve">
     <value>Choose the language you want to translate from.</value>
   </data>
   <data name="HelpForNllbTranslatorTargetLanguagesComboBox" xml:space="preserve">
     <value>Choose the language you want the input text to be translated into.</value>
+  </data>
+  <data name="import_model" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\nllbtranslator\docker\import_model.py;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="index" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\nllbtranslator\docker\templates\index.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="README" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\nllbtranslator\docker\readme.md;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="server" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\nllbtranslator\docker\server.py;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\nllbtranslator\docker\settings.py;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
