--- a/src/BackTranslationHelper/BackTranslationHelperCtrl.resx
+++ b/src/BackTranslationHelper/BackTranslationHelperCtrl.resx
@@ -129,4 +129,7 @@
   <metadata name="fontDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>213, 20</value>
   </metadata>
+  <metadata name="contextMenuStripHideDefault.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>511, 20</value>
+  </metadata>
 </root>
