--- a/src/BackTranslationHelper/ExampleEditorDialog.resx
+++ b/src/BackTranslationHelper/ExampleEditorDialog.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,25 +117,4 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="menuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>205, 17</value>
-  </metadata>
-  <data name="SentenceSplittingMenuItem.ToolTipText" xml:space="preserve">
-    <value>Check this menu to enable sentence splitting for the NLLB Translator (Check to turn on processing the text in smaller sentence chunks. Use if the NLLB Translator leaves parts of the translation out because the text to translate is too long)</value>
-  </data>
-  <data name="AddExampleMenuItem.ToolTipText" xml:space="preserve">
-    <value>For Chat Prompt-based Translators (e.g. Vertex AI or Azure Open AI) you can add examples to inform the model based on the Source Text and Target Translation text by clicking this option (also opens if you hold the Ctrl key while clicking the Save Changes button)</value>
-  </data>
-  <metadata name="contextMenuHideDefault.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>313, 17</value>
-  </metadata>
-  <metadata name="substitutionContextMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>512, 17</value>
-  </metadata>
-  <metadata name="fontDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>403, 17</value>
-  </metadata>
 </root>
