--- a/src/AIGuesserEC/AdaptItAutoConfigDialog.resx
+++ b/src/AIGuesserEC/AdaptItAutoConfigDialog.resx
@@ -120,6 +120,9 @@
   <metadata name="helpProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="textBoxNormalizationPath.HelpString" xml:space="preserve">
+    <value>Click the "..." button to the right to choose the converter you want to use as a fallback (e.g. If you convert a sentence of text and only some words are in the AI Knowledgebase, the fallback, usually an algorithmic converter, will be called to convert the words that aren't in the AI KB). When selecting the converter, be sure to set the direction (if reverse) and the normalization form if it's relevant.</value>
+  </data>
   <metadata name="fontDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>337, 17</value>
   </metadata>
